RESOLVED FIXED159199
REGRESSION(r201471): FormClient.textFieldDidEndEditing is no longer called when a text field is removed
https://bugs.webkit.org/show_bug.cgi?id=159199
Summary REGRESSION(r201471): FormClient.textFieldDidEndEditing is no longer called wh...
Ryosuke Niwa
Reported 2016-06-28 01:19:54 PDT
REGRESSION(r201471): FormClient.textFieldDidEndEditing is no longer called when a text field is removed
Attachments
Fixes the bug (5.05 KB, patch)
2016-06-28 01:23 PDT, Ryosuke Niwa
ap: review+
Ryosuke Niwa
Comment 1 2016-06-28 01:23:13 PDT
Created attachment 282221 [details] Fixes the bug
Ryosuke Niwa
Comment 2 2016-06-28 01:29:02 PDT
I've ran the test 40 times manually and the test never failed. It used to fail every 1/5 to 1/10 before the fix.
Ryosuke Niwa
Comment 3 2016-06-28 01:30:43 PDT
Ryosuke Niwa
Comment 4 2016-06-28 11:21:02 PDT
Note You need to log in before you can comment on or make changes to this bug.